Moving to ASCII-based comparison for STD files

--- a/testing/manage/regression.yml
+++ b/testing/manage/regression.yml
@@ -6,6 +6,6 @@ Tests :
 
 Output Files :
 
-   case_01 : ['segmented_02.stl','segmented_63.stl']
+   case_01 : ['segmented_02.txt','segmented_63.txt']
 
 
