Added pancake_01 test case.

--- a/testing/manage/regression.yml
+++ b/testing/manage/regression.yml
@@ -2,10 +2,11 @@
 
 Tests :
 
-   Cases : ['case_01']
+   Cases : ['case_01','pancake_01']
 
 Output Files :
 
    case_01 : ['segmented_02.txt','segmented_63.txt']
+   pancake_01 : ['cake_0_001.txt','cake_0_010.txt']
 
 
