--- a/testing/cases/pancake_01/genCubeTiffStack.yml
+++ b/testing/cases/pancake_01/genCubeTiffStack.yml
@@ -5,17 +5,16 @@ Units :
 
 Particles :
 
-   num : [ 4 , 4 , 10 ]
-   spacing : [ 1. , 1. , 1. ]
-   size    : [  2. , 2. , 2. ]
-   offset  : [ 5.5 , 7.5 , 7.5 ]
+   num : [ 2 , 2 , 6 ]                    # Number of cubes in the x-y-z directions
+   spacing : [ 4. , 4. , 4. ]              # Spacing between cubes in the x-y-z directions
+   size    : [  2. , 2. , 2. ]             # Size of the cubes in the x-y-z directions
+   offset  : [ 8. , 8. , 3.5 ]            # Lower/left/front coordinates of the lower/left/front cube
 
 Grid :
 
-   num : [100 , 100 , 200]
-   domain : [ 25. , 25. , 50. ]
-   circle radius : 10.
+   num : [100 , 100 , 160]                 # Number of voxels in the x-y-z directions
+   domain : [ 25. , 25. , 40. ]            # Size of the domain in the x-y-z directions
+   circle radius : 10.                     # Radius of the sample, i.e., binder
    
-
 
    
