--- a/input_files/F50_pours_input.yml
+++ b/input_files/F50_pours_input.yml
@@ -1,47 +1,39 @@
-# Example Segmentflow .yaml Input File
-#
-# Instructions and Notes:
-# - CT Scan Dir and STL Dir must be specified
-# - Other parameters can be left blank to use default values
-# - Details about parameters found in README.md
-
-Files :
-   Input dir path          : 'C:/Users/gusb/Research/mhe-analysis/data/F67tiff'
-   File suffix             : '.tiff'
-   Pixel size              : 0.015859838
-   Slice crop              :
-   Row crop                :
-   Column crop             :
-   Path to save output dir : 'C:/Users/gusb/Research/mhe-analysis/data/'
-   Output prefix           : 'F67'
-   Overwrite files         : True
-
-View :
-   Slices to view           : [250, 500, 750]
-   View raw images          : True
-   View preprocessed images : True
-   View semantic images     : True
-   View labeled images      : True
-
-Preprocess :
-   Apply median filter     : True
-   Rescale intensity range : [0.01, 99.99]
-
-Segmentation :
-   Histogram bins for calculating thresholds : 150
-   View histogram with threshold values      : True
-   Upper and lower y-limits of histogram     : [0, 20000000]
-   Perform instance segmentation             : True
-   Min peak distance                         : 6
-   Exclude border particles                  : True
-
-STL :
-   Create STL files                        : True
-   Suppress save message for each STL file : True
-   Number of pre-surface meshing erosions  : 0
-   Smooth voxels with median filtering     : True
-   Marching cubes voxel step size          : 1
-   Number of smoothing iterations          :
-   Target number of triangles/faces        :
-   Simplification factor per iteration     :
-
+Segmentflow version: 0.0.1
+Files:
+  Input dir path: REQUIRED
+  File suffix: tiff
+  Slice crop: null
+  Row crop: null
+  Column crop: null
+  Pixel size: 1
+  Path to save output dir: REQUIRED
+  Output prefix: ''
+  Overwrite files: false
+View:
+  Slices to view: true
+  View raw images: true
+  View preprocessed images: true
+  View semantic images: true
+  View labeled images: true
+Preprocess:
+  Apply median filter: false
+  Rescale intensity range: null
+Segmentation:
+  Histogram bins for calculating thresholds: 256
+  View histogram with threshold values: true
+  Upper and lower y-limits of histogram:
+  - 0
+  - 20000000.0
+  Perform instance segmentation: true
+  Min peak distance: 6
+  Exclude border particles: true
+  Save labeled voxels: true
+STL:
+  Create STL files: true
+  Suppress save message for each STL file: true
+  Number of pre-surface meshing erosions: 0
+  Smooth voxels with median filtering: false
+  Marching cubes voxel step size: 1
+  Number of smoothing iterations: null
+  Target number of triangles/faces: null
+  Simplification factor per iteration: null
