Include binder and particle intensity values

--- a/input_files/semantic_to_stl_input.yml
+++ b/input_files/semantic_to_stl_input.yml
@@ -1,17 +1,19 @@
 Segmentflow version: 0.0.3
 A. Input:
-  01. Input dir path: 'C://Users/cgusb/Research/mhe-analysis/data/jaysSettledGrains/output_01'
+  01. Input dir path: 'C://Users/gusb/Research/mhe-analysis/data/stlToTiff_output/output_03'
   02. File suffix: .tiff
   03. Slice crop: null
   04. Row crop: null
   05. Column crop: null
-  06. Pixel size: 1
+  06. Pixel size: 0.0608  # Determined by CT mm/pixel * grid delta
+  07. Intensity of binder voxels: 100
+  08. Intensity of particle voxels: 65000
 B. Segmentation:
-  01. Minimum distance between particle centers: 30
+  01. Minimum pixel distance between particle centers: 4  # Determined by smallest particle (0.045 mm) / pixel size (rounded to nearest pixel)
 C. Output:
-  01. Path to save output dir: 'C://Users/cgusb/Research/mhe-analysis/results/jaysSettledGrains_segmentflow'
+  01. Path to save output dir: 'C://Users/gusb/Research/mhe-analysis/results/stlToTiff_segmentflow'
   02. Overwrite files: true
-  03. Output prefix: 'res_01'
+  03. Output prefix: 'output_03'
   04. Number of slices in checkpoint plots: 5
   05. Save checkpoint figures: true
   06. Save STL file: true
