--- a/input_files/F83_01_segment_input.yml
+++ b/input_files/F83_01_segment_input.yml
@@ -1,15 +1,15 @@
 Segmentflow version : 0.0.3
 A. Input :
-  01. Input dir path : 'C:/Users/cgusb/Research/mhe-analysis/data/F83_01'
+  01. Input dir path : 'C:/Users/gusb/Research/mhe-analysis/data/F83_02_raw'
   02. File suffix    : '.tiff'
   03. Slice crop     :
   04. Row crop       :
   05. Column crop    :
   06. Pixel size     : 0.00525
 B. Output :
-  01. Path to save output dir                 : 'C:/Users/cgusb/Research/mhe-analysis/results'
-  02. Overwrite files                         : False
-  03. Output prefix                           : 'F83_01'
+  01. Path to save output dir                 : 'C:/Users/gusb/Research/mhe-analysis/results'
+  02. Overwrite files                         : True
+  03. Output prefix                           : 'F83_02'
   04. Number of slices in checkpoint plots    : 5
   05. Save checkpoint figures                 : True
   06. Save STL file                           : True
@@ -22,7 +22,7 @@ D. Segmentation :
   01. Histogram bins for calculating thresholds    : 256
   02. Upper and lower y-limits of histogram        : [0, 10000000]
   03. Perform instance segmentation                : True
-  04. Min distance between region centers (pixels) : 6
+  04. Min distance between region centers (pixels) : 10  # Min particle size (75 ums) / spatial res (5.25 um/voxel) = 14 voxels, but prev. used 6
   05. Exclude border particles                     : False
 E. Surface Meshing :
   01. Number of pre-surface meshing erosions : 0
