--- a/input_files/IDOX_CHESS.yml
+++ b/input_files/IDOX_CHESS.yml
@@ -9,13 +9,14 @@ A. Input:
   06. Pixel size: 1.48  # ums/pixel
 
 B. Output:
-  01. Path to save output dir: 'C:/Users/gusb/Research/mhe-analysis/results/CHESS_IA_layer1'
+  01. Path to save output dir: 'C:/Users/gusb/Research/mhe-analysis/results/CHESS_IA_layer1_no-edge'
   02. Overwrite files: False
-  03. Output prefix: 'CHESS_IA_layer1'
-  04. Number of slices in checkpoint plots: 4
-  05. Save STL files: True
-  06. Suppress save message for each STL file: True
-  07. Save voxel TIF stack: False
+  03. Output prefix: 'CHESS_IA_layer1_no-edge'
+  04. Specify slices to plot: [150, 200]
+  05. Number of slices in checkpoint plots: 3
+  06. Save STL files: True
+  07. Suppress save message for each STL file: True
+  08. Save voxel TIF stack: False
 
 C. Preprocessing:
   01. Apply median filter: False
@@ -24,9 +25,10 @@ C. Preprocessing:
 D. Segmentation:
   01. Histogram bins for calculating thresholds: 256
   02. Upper and lower y-limits of histogram: [0, 20000000]
-  03. Perform instance segmentation: True
-  04. Min distance between region centers (pixels): 30  # 45 ums @ 1.48 ums/pixel
-  05. Exclude border particles: False
+  03. Fill holes in semantic segmentation: True
+  04. Perform instance segmentation: True
+  05. Min distance between region centers (pixels): 30  # 45 ums @ 1.48 ums/pixel
+  06. Exclude border particles: True
 
 E. Surface Meshing:
   01. Number of pre-surface meshing erosions: 0
