--- a/input_files/instance_to_stl_input.yml
+++ b/input_files/instance_to_stl_input.yml
@@ -2,19 +2,25 @@ Segmentflow version: 0.0.3
 A. Input:
   # 01. Input dir path: 'C://Users/gusb/Research/PSAAP/verification/stlToTiff_segmentflow/output_01/output_01_labeled_voxels'
   # 01. Input dir path: 'C://Users/gusb/Research/PSAAP/verification/stlToTiff_segmentflow/output_02_2mpd/output_02_labeled_voxels'
-  01. Input dir path: 'C://Users/gusb/Research/PSAAP/verification/stlToTiff_segmentflow/output_03_3mpd/output_03_labeled_voxels'
+  # 01. Input dir path: 'C://Users/gusb/Research/PSAAP/verification/stlToTiff_segmentflow/output_03_3mpd/output_03_labeled_voxels'
+  01. Input dir path: "C://Users/gusb/Research/mhe-analysis/data/IDOX Crystals STL/IDOX 1"
   02. File suffix: '.tif'
-  03. Slice crop: null
+  03. Slice crop: [0, 500]
   04. Row crop: null
   05. Column crop: null
   # 06. Pixel size: 58.877 # **corrected** Height of STL collection / num images
   # 06. Pixel size: 29.439  # **corrected** Height of STL collection / num images
-  06. Pixel size: 14.719  # **corrected** Height of STL collection / num images
+  # 06. Pixel size: 14.719  # **corrected** Height of STL collection / num images
+  06. Pixel size: 3.35
+  07. Exclude border particles: False
 B. Output:
-  01. Path to save output dir: 'C://Users/gusb/Research/PSAAP/verification/segmentflow_correct_pix_size'
-  02. Overwrite files: true
+  01. Path to save output dir: 'C://Users/gusb/Research/mhe-analysis/results'
+  02. Overwrite files: True
   # 03. Output prefix: 'output_01_cps'
   # 03. Output prefix: 'output_02_cps'
-  03. Output prefix: 'output_03_cps'
-  04. Number of slices in checkpoint plots: 4
-  05. Save checkpoint figures: true
+  # 03. Output prefix: 'output_03_cps'
+  03. Output prefix: 'IDOX_crystals_1'
+  04. Number of slices in checkpoint plots: 3
+  05. Specify slices for checkpoint plots : [150, 250, 350]
+  06. Save checkpoint figures: True
+  07. Save STL files: False
