--- a/input_files/IDOX_pours_input.yml
+++ b/input_files/IDOX_pours_input.yml
@@ -1,10 +1,4 @@
-# Example Segmentflow .yaml Input File
-#
-# Instructions and Notes:
-# - CT Scan Dir and STL Dir must be specified
-# - Other parameters can be left blank to use default values
-# - Details about parameters found in README.md
-
+Segmentflow version : v0.0.3
 Files :
    Input dir path          : 'C:/Users/gusb/Research/mhe-analysis/data/IP_01-he6_raw'
    File suffix             : '.tiff'
@@ -12,16 +6,9 @@ Files :
    Slice crop              :
    Row crop                : [200, 830]
    Column crop             : [190, 820]
-   Path to save output dir : 'C:/Users/gusb/Research/mhe-analysis/results/IP_01'
-   Output prefix           : 'IP_01'
+   Path to save output dir : 'C:/Users/gusb/Research/mhe-analysis/results/'
+   Output prefix           : 'IP_01_single'
    Overwrite files         : True
-
-View :
-   Slices to view           : [250, 500, 750]
-   View raw images          : True
-   View preprocessed images : True
-   View semantic images     : True
-   View labeled images      : True
 
 Preprocess :
    Apply median filter     : True
@@ -33,10 +20,12 @@ Segmentation :
    Upper and lower y-limits of histogram     : [0, 20000000]
    Perform instance segmentation             : True
    Min peak distance                         : 6
-   Exclude border particles                  : True
-   Save labeled voxels                       : True
+   Exclude border particles                  : False
 
-STL :
+Output :
+   Save labeled voxels                     : False
+   Specify slices to plot                  : [500]
+   Number of slices in checkpoint plots    : 3
    Create STL files                        : True
    Suppress save message for each STL file : True
    Number of pre-surface meshing erosions  : 0
