--- a/input_files/F50_single_grain_segment_input.yml
+++ b/input_files/F50_single_grain_segment_input.yml
@@ -1,18 +1,18 @@
 Segmentflow version: 0.0.3
 A. Input:
-  01. Input dir path: C:\Users\gusb\Research\mhe-analysis\data\F50_1_Scan_1
+  01. Input dir path: C:\Users\gusb\Research\mhe-analysis\data\PTCL_IDOX2_1\Load_0
   02. File suffix: .tif
-  03. Slice crop: [340, 600]
-  04. Row crop: [600, 1250]
-  05. Column crop: [600, 1250]
-  06. Pixel size: 0.00109
+  03. Slice crop: [780, 1040]
+  04. Row crop: [0, 1000]
+  05. Column crop: [920, 1920]
+  06. Pixel size: 1.09
 B. Processing:
   01. Minimum noise volume to remove: 500
-  02. Number of erosion-dilation iterations: 8
+  02. Number of erosion-dilation iterations: 4
 C. Output:
   01. Overwrite files: true
-  02. Output prefix: F50_1_Scan_1
+  02. Output prefix: PTCL_IDOX2_1_Load0
   03. Number of slices in checkpoint plots: 5
-  04. Path to save output dir: C:\Users\gusb\Research\mhe-analysis\results\F50_1_Scan_1
+  04. Path to save output dir: C:\Users\gusb\Research\mhe-analysis\results\
   05. Save STL file: true
   06. Save voxel TIF stack: true
