--- a/input_files/IDOX_pours_input.yml
+++ b/input_files/IDOX_pours_input.yml
@@ -1,35 +1,35 @@
 # Written for Segmentflow v0.0.4
 A. Files :
-  01. Input dir path          : REQUIRED
-  02. File suffix             : tiff
-  03. Slice crop              : null
-  04. Row crop                : null
-  05. Column crop             : null
-  06. Pixel size              : 1
-  07. Path to save output dir : REQUIRED
-  08. Output prefix           : ''
-  09. Overwrite files         : false
+  01. Input dir path          : 'C:/Users/gusb/Research/mhe-analysis/data/IP_01-he6_raw'
+  02. File suffix             : '.tiff'
+  03. Slice crop              : None
+  04. Row crop                : [200, 830]
+  05. Column crop             : [190, 820]
+  06. Pixel size              : 8.434786
+  07. Path to save output dir : 'C:/Users/gusb/Research/mhe-analysis/results'
+  08. Output prefix           : 'IP_01_filled'
+  09. Overwrite files         : False
 
 B. Preprocess :
-  01. Apply median filter     : false
-  02. Rescale intensity range : null
+  01. Apply median filter     : True
+  02. Rescale intensity range : [0.01, 99.99]
 
 C. Segmentation :
   01. Histogram bins for calculating thresholds : 256
   02. Upper and lower y-limits of histogram     : [0, 20000000]
-  03. Perform instance segmentation             : true
+  03. Perform instance segmentation             : True
   04. Min peak distance                         : 6
-  05. Exclude border particles                  : true
+  05. Exclude border particles                  : True
 
 D. Output :
-  01. Save labeled voxels                     : true
+  01. Save labeled voxels                     : True
   02. Number of slices in checkpoint plots    : 3
-  03. Specific slices to plot                 : null
-  04. Create STL files                        : true
-  05. Suppress save message for each STL file : true
+  03. Specific slices to plot                 : [250, 500, 750]
+  04. Create STL files                        : True
+  05. Suppress save message for each STL file : True
   06. Number of pre-surface meshing erosions  : 1
-  07. Smooth voxels with median filtering     : false
+  07. Smooth voxels with median filtering     : True
   08. Marching cubes voxel step size          : 1
-  09. Number of smoothing iterations          : null
-  10. Target number of triangles/faces        : null
-  11. Simplification factor per iteration     : null
+  09. Number of smoothing iterations          : None
+  10. Target number of triangles/faces        : None
+  11. Simplification factor per iteration     : None
