--- a/input_files/single_grain_input.yml
+++ b/input_files/single_grain_input.yml
@@ -9,7 +9,8 @@ A. Input:
 B. Processing:
   01. Minimum volume of noise to remove: 500
   02. Number of erosion-dilation iterations: 4
-  03. Voxel step size in surface mesh creation: 2
+  03. Flip voxels in z direction: true
+  04. Voxel step size in surface mesh creation: 2
 C. Output:
   01. Overwrite files: true
   02. Output prefix: PTCL_IDOX2_1_Load0
