--- a/input_files/IDOX_pucks_input.yml
+++ b/input_files/IDOX_pucks_input.yml
@@ -1,6 +1,6 @@
 Segmentflow version: 0.0.4
 A. Input:
-  01. Input dir path: 'C:\Users\cgusb\Research\mhe-analysis\data\I43.09\bin-2-tiffs'
+  01. Input dir path: 'C:\Users\gusb\Research\mhe-analysis\data\I43.09\bin-2-tiffs'
   02. File suffix   : '.tiff'
   03. Slice crop    : null
   04. Row crop      : null
@@ -8,7 +8,7 @@ A. Input:
   06. Pixel size    : 6.010528  # ums / voxel
 
 B. Output:
-  01. Path to save output dir                : 'C:\Users\cgusb\Research\mhe-analysis\results'
+  01. Path to save output dir                : 'C:\Users\gusb\Research\mhe-analysis\results'
   02. Overwrite files                        : true
   03. Output prefix                          : 'I43.09_bin2'
   04. Specify slices to plot                 : 500
@@ -21,7 +21,7 @@ C. Preprocessing:
   01. Apply median filter                       : true
   02. Range for rescaling intensity (percentile): [24.8, 99.9]
 D. Segmentation:
-  01. Threshold values for semantic segmentation  : [30000, 59000]
+  01. Threshold values for semantic segmentation  : [30000, 59500]
   02. Upper and lower y-limits of histogram       : [0, 20000000]
   03. Fill holes in semantic segmentation         : true
   04. Min particle volume saved (voxels)          : 512  # 8^3, for 48 ums per side of cube
