--- a/input_files/sem_outlines.yml
+++ b/input_files/sem_outlines.yml
@@ -6,8 +6,9 @@ A. Input:
   05. Perform semantic segmentation: True
   06. Threshold values: [23000, 34000]
   07. Perform instance segmentation: True
-  08. Open merging aid figure: True
-  09. Path to TXT file defining merges: 'c:\Users\cgusb\Research\mhe-analysis\data\'
+  08. Exclude regions along border: False
+  09. Open merging aid figure: True
+  10. Path to TXT file defining merges: 'c:\Users\cgusb\Research\mhe-analysis\data\'
 B. Output :
   01. Output dir path: 'c:\Users\cgusb\Research\mhe-analysis\results'
   02. Output prefix: 'sem2_subarea1'
