--- a/input_files/IDOX_pucks_input.yml
+++ b/input_files/IDOX_pucks_input.yml
@@ -1,32 +1,34 @@
 Segmentflow version: 0.0.4
 A. Input:
-  01. Input dir path: 'C:\Users\gusb\Research\mhe-analysis\data\I43.09\bin-2-tiffs'
+  01. Input dir path: 'C:\Users\gusb\Research\mhe-analysis\data\I43.09\bin-4-tiffs'
   02. File suffix   : '.tiff'
-  03. Slice crop    : null
+  03. Slice crop    : [38, 880]
   04. Row crop      : null
   05. Column crop   : null
-  06. Pixel size    : 6.010528  # ums / voxel
+  06. Pixel size    : 12.021  # ums / voxel
 
 B. Output:
   01. Path to save output dir                : 'C:\Users\gusb\Research\mhe-analysis\results'
   02. Overwrite files                        : true
-  03. Output prefix                          : 'I43.09_bin2'
-  04. Specify slices to plot                 : 500
+  03. Output prefix                          : 'I43.09_bin4'
+  04. Specify slices to plot                 : 200
   05. Number of slices in checkpoint plots   : 1
   06. Save STL files                         : true
   07. Suppress save message for each STL file: true
   08. Save voxel TIF stack                   : true
 
 C. Preprocessing:
-  01. Apply median filter                       : true
-  02. Range for rescaling intensity (percentile): [24.8, 99.9]
+  01. Apply radial filter                       : true
+  02. Apply median filter                       : true
+  03. Range for rescaling intensity (percentile): [24.8, 99.9]
+
 D. Segmentation:
   01. Threshold values for semantic segmentation  : [30000, 59500]
   02. Upper and lower y-limits of histogram       : [0, 20000000]
   03. Fill holes in semantic segmentation         : true
-  04. Min particle volume saved (voxels)          : 512  # 8^3, for 48 ums per side of cube
-  05. Perform instance segmentation               : true
-  06. Min distance between region centers (pixels): 8  # 48 ums @ 6.01 ums / voxel
+  04. Min particle volume saved (voxels)          : 64  # 4^3, for 48 ums per side of cube
+  05. Perform instance segmentation               : false
+  06. Min distance between region centers (pixels): 4  # 48 ums @ 12.02 ums / voxel
   07. Exclude border particles                    : false
 
 E. Surface Meshing:
